# C-Adw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  com.konstantintutsch.Template.Devel.yaml  meson.build  template.sh
.github/ISSUE_TEMPLATE/: 1-bug_report.yaml  2-feature_request.yaml
.github/workflows/: build.yaml
build-aux/: com.konstantintutsch.Template.Devel.yaml  com.konstantintutsch.Template.yaml
data/: com.konstantintutsch.Template.desktop.in.in  com.konstantintutsch.Template.gresource.xml.in  com.konstantintutsch.Template.metainfo.xml.in.in  meson.build
data/ui/: window.blp
po/: POTFILES  Template.pot  com.konstantintutsch.Template.pot  de.po  meson.build
src/: Makefile  answer.c  answer.h  application.c  application.h  config.h.in  main.c  meson.build  window.c  window.h
